workload/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: common
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      nodeSelector:
        kubernetes.io/hostname: raspberrypi
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nas
              mountPath: /srv
            - name: data
              mountPath: /database
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      volumes:
        - name: nas
          persistentVolumeClaim:
            claimName: filebrowser-nas
        - name: data
          persistentVolumeClaim:
            claimName: filebrowser-data
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: common
spec:
  selector:
    app: filebrowser
  ports:
    - port: 80
      targetPort: 80
